# gmail-assistant

./: .env-claude  .env.example  .envrc  .gitignore  .mcp.json  .rubocop.yml  AGENTS.md  CLAUDE.md  Dockerfile  EXECUTION-SUMMARY.md  Gemfile  INTEGRATION-TASKS.md  PHASE-A-STEP-3-IMPLEMENTATION.md  PHASE-B-IMPLEMENTATION.md  README.md  WORKSPACE-18-STATUS.md  docker-compose.yml  drizzle.config.ts  eslint.config.js  gap-analysis-report.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.ts
.beads/: config.yaml  issues.jsonl  last-touched
artifacts/: analysis-prompt-improved.md  analysis-prompt-orignal.md  api-conventions.md  classification-and-drafting.md  codebase-review-antipatterns.md  database-conventions.md  debugging-workflow-beads-grafana-bugsink-audit.md  extraction-of-lessons-learned-from-sessions-history.md  gitops.md  project-overview.md  registry.json  self-built-tooling.md  session-gotchas.md  system-builder-instructions.md  testing-conventions.md
config/: app.example.yml  app.yml  application.rb  boot.rb  com.gmail-assistant.process-inbox.plist  communication_styles.example.yml  communication_styles.yml  contacts.example.yml  contacts.yml  credentials.yml.enc  label_ids.example.yml  label_ids.yml  master.key  puma.rb  routes.rb  sidekiq.yml  test.yml
data/: dashboard.html  inbox-v1.db  schema.sql
db/: schema.rb
docs/: INBOX-TRIAGE-PERF-TEST-RESULTS.md  INBOX-TRIAGE-PERFORMANCE-ANALYSIS.md  PARALLEL-READS-IMPLEMENTATION.md  PHASE-A-STEP-3.md  PHASE-B-CLASSIFY.md  STACK.md  admin-ui-guide.md  (+6 more)
(+3427 files in other folders)
